--- a/MagisterGL/MagisterGL/Base.lproj/Main.storyboard
+++ b/MagisterGL/MagisterGL/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="a9V-BR-1rW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="a9V-BR-1rW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -39,15 +39,26 @@
                                     <segue destination="m7l-ZR-Ljp" kind="show" id="e0a-Yb-lh6"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PlZ-xa-Jtc">
+                                <rect key="frame" x="37" y="439.5" width="300" height="44"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="Suq-Gg-DZ5" kind="show" id="bVI-r1-YAM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="PlZ-xa-Jtc" firstAttribute="top" secondItem="h1W-TQ-p5K" secondAttribute="bottom" constant="20" id="7co-VP-GIZ"/>
                             <constraint firstItem="h1W-TQ-p5K" firstAttribute="top" secondItem="6hh-Uw-tZf" secondAttribute="bottom" constant="20" id="HJ0-Ke-r4E"/>
+                            <constraint firstItem="PlZ-xa-Jtc" firstAttribute="height" secondItem="h1W-TQ-p5K" secondAttribute="height" id="Iai-JS-Bn6"/>
+                            <constraint firstItem="PlZ-xa-Jtc" firstAttribute="centerX" secondItem="ThC-U8-ezt" secondAttribute="centerX" id="NXS-GH-nPK"/>
                             <constraint firstItem="h1W-TQ-p5K" firstAttribute="centerX" secondItem="ThC-U8-ezt" secondAttribute="centerX" id="R8H-5X-BQz"/>
                             <constraint firstItem="h1W-TQ-p5K" firstAttribute="height" secondItem="6hh-Uw-tZf" secondAttribute="height" id="SdA-Jn-lRu"/>
                             <constraint firstItem="6hh-Uw-tZf" firstAttribute="centerY" secondItem="ThC-U8-ezt" secondAttribute="centerY" id="XcC-DW-XYx"/>
                             <constraint firstItem="h1W-TQ-p5K" firstAttribute="width" secondItem="6hh-Uw-tZf" secondAttribute="width" id="bKM-g2-7Yp"/>
                             <constraint firstItem="6hh-Uw-tZf" firstAttribute="centerX" secondItem="ThC-U8-ezt" secondAttribute="centerX" id="hgi-wX-oBQ"/>
+                            <constraint firstItem="PlZ-xa-Jtc" firstAttribute="width" secondItem="h1W-TQ-p5K" secondAttribute="width" id="zSv-nq-NOS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="68j-8y-vUC"/>
@@ -61,7 +72,7 @@
             <objects>
                 <navigationController id="a9V-BR-1rW" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="01H-GD-W2d">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -104,7 +115,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="InP-8N-r3k" customClass="IsolineView" customModule="MagisterGL" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -126,6 +137,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btf-kk-I7h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-423" y="940"/>
+        </scene>
+        <!--Isoline View Controller-->
+        <scene sceneID="RfX-5Q-HxF">
+            <objects>
+                <viewController id="Suq-Gg-DZ5" customClass="MAGIsolineViewController" customModule="MagisterGL" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vhq-Sj-LAs"/>
+                        <viewControllerLayoutGuide type="bottom" id="7KO-f2-31Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H9e-C6-Ocr" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Grf-WK-2CD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1394" y="1477"/>
         </scene>
     </scenes>
 </document>
