--- a/MagisterGL/MagisterGL/Base.lproj/Main.storyboard
+++ b/MagisterGL/MagisterGL/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fc5-rN-1wo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="a9V-BR-1rW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -50,7 +50,7 @@
                                 <rect key="frame" x="37.5" y="493.5" width="300" height="44"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <segue destination="fc5-rN-1wo" kind="show" id="IL6-Zy-1em"/>
+                                    <segue destination="fc5-rN-1wo" kind="show" id="GIL-dq-iV4"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -149,6 +149,22 @@
             </objects>
             <point key="canvasLocation" x="-423" y="940"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="txZ-Fp-wAU">
+            <objects>
+                <navigationController id="4eP-Fj-frX" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KY8-Et-Bod">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fc5-rN-1wo" kind="relationship" relationship="rootViewController" id="qhX-bz-NlY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="neh-R0-Ljn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4128" y="1355"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="BAt-HF-GMA">
             <objects>
@@ -173,10 +189,85 @@
                             <constraint firstItem="Lyg-Da-mv5" firstAttribute="top" secondItem="8sy-F7-irp" secondAttribute="bottom" id="w8i-VH-BgP"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="hnv-r4-Fgi">
+                        <barButtonItem key="rightBarButtonItem" title="Test" id="7Wn-zH-ad6">
+                            <connections>
+                                <segue destination="HKY-s1-MDh" kind="popoverPresentation" popoverAnchorBarButtonItem="7Wn-zH-ad6" id="C0F-kz-hg9">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="customGeometryView" destination="Lyg-Da-mv5" id="dZ7-sS-rwd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lgB-Av-xWo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2305" y="1431"/>
+            <point key="canvasLocation" x="-2322" y="1477"/>
+        </scene>
+        <!--Choose File View Controller-->
+        <scene sceneID="yJc-5A-4gx">
+            <objects>
+                <viewController storyboardIdentifier="MAGChooseFileViewController" id="HKY-s1-MDh" customClass="MAGChooseFileViewController" customModule="MagisterGL" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ydw-Or-1bc"/>
+                        <viewControllerLayoutGuide type="bottom" id="aX8-yH-lYf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="e5y-wb-Kaa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNq-wl-wQa">
+                                <rect key="frame" x="20" y="64" width="335" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="xrd-Pa-bYr"/>
+                                </constraints>
+                                <state key="normal" title="Test 1"/>
+                                <connections>
+                                    <action selector="test1Tapped:" destination="HKY-s1-MDh" eventType="touchUpInside" id="JuC-KW-7G2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7R-K4-GCr">
+                                <rect key="frame" x="20" y="116" width="335" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="ssw-Vy-1MR"/>
+                                </constraints>
+                                <state key="normal" title="Test 2"/>
+                                <connections>
+                                    <action selector="test2Tapped:" destination="HKY-s1-MDh" eventType="touchUpInside" id="LDL-Gz-0So"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60g-Zb-8RA">
+                                <rect key="frame" x="20" y="168" width="335" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="CQM-XB-dhJ"/>
+                                </constraints>
+                                <state key="normal" title="Test 3"/>
+                                <connections>
+                                    <action selector="test3Tapped:" destination="HKY-s1-MDh" eventType="touchUpInside" id="kQ0-0V-Uuo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="60g-Zb-8RA" firstAttribute="centerX" secondItem="e5y-wb-Kaa" secondAttribute="centerX" id="44W-22-Cvo"/>
+                            <constraint firstItem="60g-Zb-8RA" firstAttribute="leading" secondItem="e5y-wb-Kaa" secondAttribute="leading" constant="20" id="HAl-Ug-Seu"/>
+                            <constraint firstItem="kNq-wl-wQa" firstAttribute="top" secondItem="Ydw-Or-1bc" secondAttribute="bottom" constant="44" id="IDx-pb-z0U"/>
+                            <constraint firstItem="60g-Zb-8RA" firstAttribute="top" secondItem="e7R-K4-GCr" secondAttribute="bottom" constant="8" id="Me7-T7-ub6"/>
+                            <constraint firstItem="e7R-K4-GCr" firstAttribute="top" secondItem="kNq-wl-wQa" secondAttribute="bottom" constant="8" id="OG6-Ax-uPk"/>
+                            <constraint firstItem="kNq-wl-wQa" firstAttribute="centerX" secondItem="e5y-wb-Kaa" secondAttribute="centerX" id="PlC-HI-ZA6"/>
+                            <constraint firstItem="e7R-K4-GCr" firstAttribute="leading" secondItem="e5y-wb-Kaa" secondAttribute="leading" constant="20" id="Vj8-EK-UNb"/>
+                            <constraint firstItem="kNq-wl-wQa" firstAttribute="leading" secondItem="e5y-wb-Kaa" secondAttribute="leading" constant="20" id="aD0-i8-kkK"/>
+                            <constraint firstItem="e7R-K4-GCr" firstAttribute="centerX" secondItem="e5y-wb-Kaa" secondAttribute="centerX" id="bmb-Ag-mfO"/>
+                            <constraint firstAttribute="trailing" secondItem="kNq-wl-wQa" secondAttribute="trailing" constant="20" id="gaT-lz-oYI"/>
+                            <constraint firstAttribute="trailing" secondItem="e7R-K4-GCr" secondAttribute="trailing" constant="20" id="wUB-ef-FgD"/>
+                            <constraint firstAttribute="trailing" secondItem="60g-Zb-8RA" secondAttribute="trailing" constant="20" id="yRy-uO-aL4"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rvH-o4-Ofo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2322" y="2268"/>
         </scene>
         <!--Isoline View Controller-->
         <scene sceneID="RfX-5Q-HxF">
@@ -197,4 +288,7 @@
             <point key="canvasLocation" x="-1394" y="1477"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="GIL-dq-iV4"/>
+    </inferredMetricsTieBreakers>
 </document>
